# CMC

./: .gitignore  LICENSE  README.md  pyproject.toml
ENV/: lcl.json  prd.json
cmc/: __init__.py  __main__.py  cli.py
cmc/models/: __init__.py  cmc_data.py
cmc/modules/exceptions/: __init__.py  exc_initializer.py  exc_minecraft.py
cmc/modules/initializer/: __init__.py  config.py  console.py  initializer.py  package.py
cmc/modules/installer/: __init__.py  minecraft.py  plugins.py
cmc/modules/minecraft/: Minecraft.py  __init__.py  __main__.py  console.py
cmc/modules/utils/: __init__.py  console.py  downloader.py  utils.py
config/: server.json  server.properties.json
gcp_mc/: __init__.py  __main__.py  cli.py  gcp_mc.py  main.py
gcp_mc/modules/minecraft/: __main__.py  env.py
gcp_mc/modules/utils/: __init__.py  home_env.py  utils.py
lib/utils/: __init__.py  env.py  home_env.py  logging.py
modules/dynmap-db/: __init__.py
modules/dynmap-db/docker/: database.dockerfile
modules/dynmap-db/scripts/: db.py
modules/minecraft/: __init__.py  __main__.py  env.py
modules/minecraft/config/: Dynmap.py  Dynmap_config.py  Minecraft_config.py  server.properties.json
modules/minecraft/scripts/: Dynmap_config.py  MasterConfig.py  Minecraft_config.py  config.py  configure.py  database.py  download_bins.py  env.py  minecraft.py  minecraft_docker.py  minecraft_env.py  utils.py
modules/palmsbet_mc/: __init__.py  server.json
modules/palmsbet_mc/config/: dynmap.configuration.json  server.properties.json
modules/palmsbet_mc/docker/: server.dockerfile  (+1 more)
tests/: tests_gcp_mc.py
(+12 files in other folders)
