[tool.poetry]
name = "gcp-mc"
version = "0.1.0"
description = "A minecraft server google cloud platform infrastructure project"
authors = ["Vasil Derilov"]
license = "GPL-3"
readme = "README.md"
packages = [{include = "gcp_mc"},
    {include = "utils", from="lib" }, 
    {include = "palmsbet_mc", from = "modules"}, 
    {include = "dynmap-db", from = "modules"}]

[tool.poetry.dependencies]
python = "^3.11"
google-api-python-client = "^2.78.0"
oauth2client = "^4.1.3"
docker = "^6.0.1"
pick = "^2.2.0"
pyyaml = "^6.0"
requests = "^2.28.2"
tqdm = "^4.64.1"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gcp_mc_cli = 'gcp_mc:main'
