[tool.poetry]
name = "gcp-mc"
version = "0.9.0"
description = "A tool for maintaining minecraft projects"
authors = ["Vasil Derilov"]
license = "GPL-3"
readme = "README.md"
packages = [{include = "gcp_mc"}]

[tool.poetry.dependencies]
python = "3.11.1"
google-api-python-client = "^2.78.0"
oauth2client = "^4.1.3"
docker = "^6.0.1"
pick = "^2.2.0"
pyyaml = "^6.0"
requests = "^2.28.2"
tqdm = "^4.64.1"
rich = "^13.3.1"
typer = "^0.7.0"
colorama = "^0.4.6"
shellingham = "^1.5.0.post1"
pyinstaller = "^5.8.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pylint = "^2.16.2"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88